--- a/css/app.css
+++ b/css/app.css
@@ -377,7 +377,7 @@ button,
 [type=button],
 [type=reset],
 [type=submit] {
-  -webkit-appearance: button;
+  --webkit-appearance: button;
 }
 button:not(:disabled),
 [type=button]:not(:disabled),
@@ -435,7 +435,7 @@ legend + * {
 
 [type=search] {
   outline-offset: -2px;
-  -webkit-appearance: textfield;
+  --webkit-appearance: textfield;
 }
 
 /* rtl:raw:
@@ -456,7 +456,7 @@ legend + * {
 
 ::file-selector-button {
   font: inherit;
-  -webkit-appearance: button;
+  --webkit-appearance: button;
 }
 
 output {
@@ -10778,6 +10778,18 @@ textarea.form-control-lg {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
+.article-paragraph p {
+  line-height: 30px;
+}
+
+.f-16 {
+  font-size: 16px;
+}
+
+.f-14 {
+  font-size: 14px;
+}
+
 .tag-font {
   font-size: 42px;
 }
@@ -10794,14 +10806,21 @@ textarea.form-control-lg {
   font-size: 13px;
 }
 
+.detail-tilte-font {
+  font-size: 32px;
+}
+
 @media (max-width: 768px) {
   .font-1 {
-    font-size: 12px;
-  }
-  .font-2 {
     font-size: 14px;
   }
+  .font-2 {
+    font-size: 16px;
+  }
   .tag-font {
+    font-size: 22px;
+  }
+  .detail-tilte-font {
     font-size: 22px;
   }
 }
